distribution/oidc-auth-v2/dex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
        app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex
      containers:
      - image: ghcr.io/dexidp/dex
        name: dex
        command: ["dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: http
          containerPort: 5556
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
      volumes:
      - name: config
        configMap:
          name: dex-config
          items:
          - key: config.yaml
            path: config.yaml
